--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,33 @@
+@font-face {
+  font-family: 'Inter';
+  font-weight: 100 900; /* For variable font, keep the range */
+  src: url('../assets/fonts/InterVariable.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter Display';
+  font-weight: 400;
+  src: url('../assets/fonts/InterDisplay-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter Display';
+  font-weight: 500;
+  src: url('../assets/fonts/InterDisplay-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter Display';
+  font-weight: 600;
+  src: url('../assets/fonts/InterDisplay-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Monaspace';
+  font-weight: 200 800; /* For variable font, keep the range */
+  src: url('../assets/fonts/MonaspaceNeonVarVF.woff2') format('woff2');
+}
+
 :root {
   --color-red-50: oklch(0.971 0.013 17.38);
   --color-red-100: oklch(0.936 0.032 17.717);
