--- a/src/styles.css
+++ b/src/styles.css
@@ -334,6 +334,7 @@ h1 {
 }
 
 p {
+  font-family: 'Inter', Arial;
   font-size: 15px;
   color: var(--color-zinc-800);
 }
@@ -431,5 +432,6 @@ img {
 }
 
 #highlight-text {
+  font-family: 'Inter', Arial;
   color: var(--color-zinc-800);
 }
