--- a/src/styles.css
+++ b/src/styles.css
@@ -314,18 +314,17 @@
 }
 
 html {
-  height: 100vh;
-  /* background: linear-gradient(
-    135deg,
-    var(--color-orange-300),
-    var(--color-purple-300)
-  ); */
+  height: 80vh;
   background: #e7e3e4;
   scroll-behavior: smooth;
 }
 
 body button {
   font-family: Inter, Arial;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 100vw;
 }
 
 h1 {
@@ -342,26 +341,23 @@ p {
 }
 
 #summary {
-  width: 500px;
   line-height: 1.5;
   margin-bottom: 24px;
 }
 
 .main {
-  margin: 80px auto;
+  margin-top: 16px;
   display: flex;
   flex-direction: column;
   gap: 32px;
-  justify-items: center;
-  justify-content: center;
 }
 
 .card {
   background: rgb(255, 255, 255, 0.5);
-  padding: 16px 32px 40px 32px;
+  padding: 8px 24px 40px 24px;
   border-radius: 12px;
   margin: 0px auto;
-  height: fit-content;
+  height: 100vh;
 }
 
 .button-default {
@@ -401,11 +397,6 @@ p {
   transform: translate(0px);
 }
 
-emphasis {
-  color: var(--color-red-500);
-  font-style: italic;
-}
-
 .btn-label {
   user-select: none;
   color: var(--color-zinc-800);
@@ -419,7 +410,7 @@ img {
   border: 1px solid rgb(0, 0, 0, 0.1);
   padding: 4px 12px;
   border-radius: 8px;
-  max-width: 500px;
+  max-width: 80vw;
   box-shadow: lch(0 0 0 / 0.02) 0px 4px 4px -1px;
 }
 
