--- a/src/styles.css
+++ b/src/styles.css
@@ -339,6 +339,7 @@ h1 {
   font-family: -apple-system, Arial;
   font-size: 28px;
   font-weight: 500;
+  line-height: 1.4;
   color: var(--color-zinc-800);
   margin: 12px 0px 24px 0px;
 }
@@ -368,7 +369,7 @@ img {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 80px;
+  height: 120px;
   border-top: 1px solid rgb(0, 0, 0, 0.1);
   padding-top: 16px;
 }
