--- a/src/styles.css
+++ b/src/styles.css
@@ -333,7 +333,7 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   padding: 24px;
-  margin-bottom: 80px;
+  margin-bottom: 108px;
 }
 
 h1 {
@@ -357,7 +357,7 @@ p {
 }
 
 img {
-  background: var(--color-zinc-800);
+  background: var(--color-gray-50);
   border: 1px solid rgb(0, 0, 0, 0.1);
   padding: 4px;
   border-radius: 8px;
@@ -371,7 +371,7 @@ img {
   left: 0;
   width: 100%;
   height: 108px;
-  border-top: 1px solid rgb(0, 0, 0, 0.1);
+  border-top: 1px solid rgb(0, 0, 0, 0.9);
   padding-top: 16px;
 }
 
@@ -399,6 +399,7 @@ img {
 
 .btn-icon {
   height: 16px;
+  color: var(--color-zinc-100);
 }
 
 .btn-label {
