--- a/src/styles.css
+++ b/src/styles.css
@@ -325,7 +325,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background: var(--color-zinc-900);
+  background: #18191b;
 }
 
 .content {
