--- a/src/styles.css
+++ b/src/styles.css
@@ -357,7 +357,7 @@ p {
 }
 
 img {
-  background: var(--color-gray-50);
+  background: var(--color-zinc-800);
   border: 1px solid rgb(0, 0, 0, 0.1);
   padding: 4px;
   border-radius: 8px;
