--- a/src/styles.css
+++ b/src/styles.css
@@ -371,7 +371,7 @@ img {
   left: 0;
   width: 100%;
   height: 108px;
-  border-top: 1px solid rgb(0, 0, 0, 0.9);
+  border-top: 1px solid var(--color-zinc-950);
   padding-top: 16px;
 }
 
