--- a/src/styles.css
+++ b/src/styles.css
@@ -373,6 +373,8 @@ img {
   height: 108px;
   border-top: 1px solid var(--color-zinc-950);
   padding-top: 16px;
+  background: var(--color-zinc-800);
+  z-index: 100;
 }
 
 .button-default {
