--- a/src/styles.css
+++ b/src/styles.css
@@ -373,7 +373,7 @@ img {
   height: 108px;
   border-top: 1px solid var(--color-zinc-950);
   padding-top: 16px;
-  background: var(--color-zinc-800);
+  background: #18191b;
   z-index: 100;
 }
 
