--- a/src/styles.css
+++ b/src/styles.css
@@ -420,16 +420,16 @@ img {
   align-items: top;
 }
 
-.highlight-icon {
+/* .highlight-icon {
   color: var(--color-green-400);
   margin-top: 2px;
   margin-left: 6px;
   animation: bounce2 2s ease infinite;
-}
+} */
 
-#highlight-text {
+/* #highlight-text {
   font-family: 'Inter', Arial;
   line-height: 1.5;
   font-size: 14px;
   color: var(--color-zinc-100);
-}
+} */
