--- a/src/styles.css
+++ b/src/styles.css
@@ -341,11 +341,21 @@ code {
   font-size: 12px;
   color: var(--color-zinc-100);
   background: var(--color-zinc-700);
-  padding: 4px 6px 2px 6px;
+  padding: 4px 4px 2px 4px;
   border-radius: 4px;
   height: 20px;
   display: inline-flex;
   align-items: center;
+}
+
+ul {
+  padding: 0;
+  margin-left: 16px;
+  color: var(--color-zinc-100);
+}
+
+ul > li {
+  margin-bottom: 8px;
 }
 
 h1 {
@@ -380,7 +390,7 @@ img {
   left: 0;
   width: 100%;
   height: 108px;
-  border-top: 1px solid var(--color-zinc-950);
+  border-top: 1px solid #444444;
   padding-top: 16px;
   background: #18191b;
   z-index: 100;
