--- a/src/styles.css
+++ b/src/styles.css
@@ -367,12 +367,27 @@ h1 {
   margin: 12px 0px 24px 0px;
 }
 
+h2 {
+  font-family: -apple-system, Arial;
+  font-size: 24px;
+  font-weight: 550;
+  line-height: 1.4;
+  color: var(--color-zinc-100);
+  margin: 28px 0px 12px 0px;
+}
+
 p {
   font-family: -apple-system, Arial;
   font-size: 15px;
   color: var(--color-zinc-100);
   line-height: 1.6;
   margin-bottom: 24px;
+}
+
+emphasis {
+  font-weight: 500;
+  color: var(--color-zinc-100);
+  text-decoration: underline;
 }
 
 img {
