--- a/src/styles.css
+++ b/src/styles.css
@@ -386,6 +386,15 @@ h2 {
   margin: 28px 0px 12px 0px;
 }
 
+h3 {
+  font-family: -apple-system, Arial;
+  font-size: 20px;
+  font-weight: 550;
+  line-height: 1.4;
+  color: var(--color-zinc-300);
+  margin: 32px 0px 12px 0px;
+}
+
 p {
   font-family: -apple-system, Arial;
   font-size: 15px;
