--- a/src/styles.css
+++ b/src/styles.css
@@ -462,7 +462,7 @@ img {
 }
 
 #tip-selector {
-  margin: 16px;
+  margin: 16px 16px 0px 16px;
   height: 44px;
   display: flex;
   padding: 0px 24px;
