Added collapsible category selection

--- a/src/styles.css
+++ b/src/styles.css
@@ -462,7 +462,7 @@ img {
 }
 
 #tip-selector {
-  margin: 16px 16px 0px 16px;
+  margin: 0px 16px 0px 16px;
   height: 44px;
   display: flex;
   padding: 0px 24px;
@@ -470,4 +470,16 @@ img {
   font-family: -apple-system, Arial;
   border: 1px solid var(--color-zinc-700);
   border-radius: 8px;
+  opacity: 0;
+  transition: 0.2s;
+  isolation: isolate;
+}
+
+#header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 0px;
+  transition: height 0.2s;
+  background: var(--color-zinc-950);
 }
