--- a/src/styles.css
+++ b/src/styles.css
@@ -463,7 +463,7 @@ img {
 
 /* Category collapsible section */
 #category-container {
-  margin: 0px;
+  margin-top: -100px;
   display: flex;
   flex-direction: row;
   gap: 16px;
